# wordcloud-benchmark

./: .gitignore
draw_workcloud_opencv_wasm/: CMakeLists.txt  Dockerfile  index.html  index2.html
draw_workcloud_opencv_wasm/src/: main1.cpp  main2.cpp
draw_workcloud_opencvjs/: index.html
make_wordcloud_json/: Untitled.ipynb  benchmark-cloudia.py  drawtest_by_opencv_py.ipynb  get-aozora.sh  make_wordcloud_json.ipynb  opencv_resize.py  pyproject.toml
make_wordcloud_json/data/: original-000148.txt
