[tool.poetry]
name = "wordcloud-benchmark"
version = "0.1.0"
description = ""
authors = ["KOUNOIKE Yuusuke <kounoike.yuusuke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wordcloud = "^1.8.1"
aozora-cli = "^0.0.4"
cloudia = "^0.2.2"
fugashi = {extras = ["unidic"], version = "^1.0.5"}
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
notebook = "^6.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
